<resources>
    <string name="app_name">MedicalSchedulingApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="access_token">pk.eyJ1IjoiYXRoZG9zOTkiLCJhIjoiY2tsbXV3dHhxMGQxdjJ2bnoyNTVjbWxpZCJ9.ZcD6r5AOI79Qy8zNUga2kg</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Register</string>
    <string name="login_page">Log In</string>
    <string name="register_page">Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="submit_form">Submit</string>
    <string name="edit_account_header">Edit Account Info</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="greeting">Hello,</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="edit_user">Edit User Info</string>
    <string name="logout">Logout</string>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
        <item>N/A</item>
    </string-array>
    <string name="title"> <font color='@color/purple_500'>MED+</font> SCHEDULER</string>
    <string name="title_activity_appointment_view">MainActivity</string>
</resources>